<<<<<<< HEAD
<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Home</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="project_name">PROJECTNAME</string>
    <string name="create_project_button"> Create Project</string>
    <string name="project">Your Projects</string>
    <string name="today">Today</string>
    <string name="report_time">Confirm Time</string>
    <string name="add_text">Add Project</string>
    <string name="create_text">Create</string>
    <string name="add_hint_text">Enter your project name</string>
    <string name="edit_text">Edit</string>
    <string name="title_activity_sub_list">SubListActivity</string>
    <string name="title_activity_adapter">Adapter</string>
    <string name="title_activity_submission_cal_fragment">SubmissionCalFragment</string>
    <string name="title_activity_submission_fragment">SubmissionFragment</string>
=======
<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Home</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="project_name">PROJECTNAME</string>
    <string name="create_project_button"> Create Project</string>
    <string name="project">Your Projects</string>
    <string name="today">Today</string>
    <string name="report_time">Confirm Time</string>
    <string name="add_text">Add Project</string>
    <string name="create_text">Create</string>
    <string name="add_hint_text">Enter your project name</string>
    <string name="edit_text">Edit</string>
    <string name="title_activity_sub_list">SubListActivity</string>
    <string name="title_activity_adapter">Adapter</string>
    <string name="title_activity_submission_cal_fragment">SubmissionCalFragment</string>
    <string name="title_activity_submission_fragment">SubmissionFragment</string>
    <string name="confirm_button">Confirm</string>
    <string name="cancel_button">Cancel</string>
    <string name="title_confirm_time">Are you sure?</string>
    <string name="confirm_dialog_message">Time info Bitch</string>
    <string name="select_start">StartStat</string>
    <string name="select_end">EndStat</string>
    <string name="stat">Statistics</string>
    <string name="go_statistics">GO</string>
    <string name ="cancel_project_button">Back</string>
    
>>>>>>> 57d2125a55c4a556e709a260ef1a8a0d2faab932
    <string name="monday">MON</string>
    <string name="tuesday">TUE</string>
    <string name="wednesday">WED</string>
    <string name="thursday">THU</string>
    <string name="friday">FRI</string>
    <string name="saturday">SAT</string>
<<<<<<< HEAD
    <string name="sunday">SUN</string>
    <string name="confirm_button">Confirm</string>
    <string name="cancel_button">Cancel</string>
    <string name="title_confirm_time">Are you sure?</string>
    <string name="confirm_dialog_message">Time info Bitch</string>
    <string name="select_start">StartStat</string>
    <string name="select_end">EndStat</string>
    <string name="stat">Statistics</string>
    <string name="go_statistics">GO</string>
    <string name="select_start_export">GO</string>
    <string name="select_end_export">GO</string>
    <string name="export">Export</string>

    <!-- Menu items -->
    <string-array name="nav_drawer_items">
        <item>Home</item>
        <item>Submissions</item>
        <item>Statistics</item>
        <item>Export</item>
        <item>Settings</item>
    </string-array>

    <!-- If we want icons -->
    <!--
	<array name="nav_drawer_icons">
		<item>@drawable/ic_home</item>
        <item>@drawable/ic_people</item>
        <item>@drawable/ic_photos</item>
        <item>@drawable/ic_communities</item>
        <item>@drawable/ic_pages</item>
        <item>@drawable/ic_whats_hot</item>   
	</array>
    -->


    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="title_activity_statistics_fragment">StatisticsFragment</string>
    <string name="title_activity_export_fragment">ExportFragment</string>

</resources>
=======
    <string name="sunday">SUN</string>

    <!-- Menu items -->
    <string-array name="nav_drawer_items">
        <item>Home</item>
        <item>Submissions</item>
        <item>Statistics</item>
        <item>Export</item>
        <item>Settings</item>
    </string-array>

    <!-- If we want icons -->
    <!--
	<array name="nav_drawer_icons">
		<item>@drawable/ic_home</item>
        <item>@drawable/ic_people</item>
        <item>@drawable/ic_photos</item>
        <item>@drawable/ic_communities</item>
        <item>@drawable/ic_pages</item>
        <item>@drawable/ic_whats_hot</item>   
	</array>
    -->


    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="title_activity_statistics_fragment">StatisticsFragment</string>

</resources>

>>>>>>> 57d2125a55c4a556e709a260ef1a8a0d2faab932
