<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.tson.CreateProjectActivity"
    tools:ignore="MergeRootFrame" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        
         <View
            android:id="@+id/add_line3"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginTop="50dp"
            android:background="@android:color/darker_gray" />
	
        <TextView
            android:id="@+id/add_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-thin"
            android:text="@string/add_text"
            android:textSize="32sp" 
            />
        
        <View
            android:id="@+id/add_line2"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <EditText
            android:id="@+id/project_name_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="40dp"
            android:layout_marginTop="60dp"
            android:ems="10"
            android:fontFamily="sans-serif-thin"
            android:hint="@string/add_hint_text" >

            <requestFocus />
        </EditText>
        
        <Button
            android:id="@+id/add_button"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:fontFamily="sans-serif-thin"
            android:text="@string/create_text"
            android:textSize="32sp"
            android:onClick = "createProject" />
        
    </LinearLayout>

</FrameLayout>
