  <ScrollView
               xmlns:android="http://schemas.android.com/apk/res/android"
   		 xmlns:tools="http://schemas.android.com/tools"
             android:id="@+id/scrollView1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" >
             
    <LinearLayout

   		 android:id="@+id/rl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    tools:context=".HomeActivity" >

       


        

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:layout_marginTop="80dp"
            android:gravity="center">

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
              
                android:background="@null"
                android:src="@drawable/back" />

            <TextView
                android:id="@+id/projectNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:fontFamily="sans-serif-thin"
                android:text="@string/today"
                android:textSize="42sp" />

            <ImageButton
                android:id="@+id/imageButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:src="@drawable/next" />

        </LinearLayout>

        <View
            android:id="@+id/view1"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginTop="50dp"
            android:background="@android:color/darker_gray" />
	
        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-thin"
            android:text="@string/project"
            android:textSize="32sp" />
        
        <View
            android:id="@+id/view2"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <ListView
            android:id="@+id/projectListView"
            android:layout_width="match_parent"
            android:layout_height="262dp"
            android:layout_marginTop="40dp" >

        </ListView>

        <Button
            android:id="@+id/create_project_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="40dp"
            android:layout_weight="0"
            android:fontFamily="sans-serif-thin"
            android:onClick="openCreateProjectActivity"
            android:text="@string/create_project_button"
            android:textSize="32sp" />

        <Button
            android:id="@+id/report_time"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_weight="0"
            android:fontFamily="sans-serif-thin"
            android:text="@string/report_time"
            android:textSize="32sp" />


</LinearLayout>
</ScrollView>