
  <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      android:id="@+id/scrollView1"
      android:layout_width="fill_parent"
      android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

      <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content" 
         android:layout_marginTop="20dp"
         android:gravity="center">

		<EditText
         	android:id="@+id/startTime"
        	 android:layout_width="wrap_content"
        	 android:layout_marginLeft="5dp"
        	 android:textSize="25sp"
        	 android:layout_weight="1"
        	 android:layout_height="wrap_content"
        	 android:editable="false" >
		</EditText>
		
        <ImageButton
        	 android:id="@+id/imageButtonStart"
        	 android:layout_width="80dip"
   			 android:layout_height="80dip"
   			 android:scaleType="fitCenter"
   			 android:background="@null"
        	 android:contentDescription="@string/select_start"
        	 android:onClick="showDateDialog"
        	 android:src="@drawable/calendar_icon1" />

       </LinearLayout>
        
       <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">
        
			<EditText
         		android:id="@+id/endTime"
        	 	android:layout_width="wrap_content"
        	 	android:layout_marginLeft="5dp"
        	 	android:textSize="25sp"
        	 	android:layout_weight="1"
        		android:layout_height="wrap_content"
        		android:editable="false">
			</EditText>
     
     		<ImageButton
         	android:id="@+id/imageButtonEnd"
        	android:layout_width="80dip"
   			android:layout_height="80dip"
   			android:scaleType="fitCenter"
   			android:background="@null"
         	android:contentDescription="@string/select_end"
         	android:onClick="showDateDialog"
         	android:src="@drawable/calendar_icon1" />
         
         </LinearLayout>

                <View
            android:id="@+id/view1"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginTop="50dp"
            android:background="@android:color/darker_gray" />
        
            <Button
            android:id="@+id/goStatistics"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:fontFamily="sans-serif-thin"
            android:text="@string/go_statistics"
            android:textSize="32sp"
            android:onClick = "showStatistics" />

		    <ListView
		        android:id="@+id/statistics_view"
		        android:layout_width="match_parent"
		        android:layout_height="256dp" >
		    </ListView>

            
        
</LinearLayout>
</ScrollView>
 