<?xml version="1.0" encoding="utf-8"?>
  <ScrollView
         xmlns:tools="http://schemas.android.com/tools"
             android:id="@+id/scrollView1"
             android:layout_width="match_parent"
             android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center" >

            <EditText
                android:id="@+id/startTimeExport"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:editable="false"
                android:textSize="25sp" >
            </EditText>

            <ImageButton
                android:id="@+id/imageButtonStartExport"
                android:layout_width="80dip"
                android:layout_height="80dip"
                android:background="@null"
                android:contentDescription="@string/select_start_export"
                android:onClick="showDateDialog"
                android:scaleType="fitCenter"
                android:src="@drawable/calendar_icon1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/endTimeExport"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:editable="false"
                android:textSize="25sp" >
            </EditText>

            <ImageButton
                android:id="@+id/imageButtonEndExport"
                android:layout_width="80dip"
                android:layout_height="80dip"
                android:background="@null"
                android:contentDescription="@string/select_end_export"
                android:onClick="showDateDialog"
                android:scaleType="fitCenter"
                android:src="@drawable/calendar_icon1" />
        </LinearLayout>

        <View
            android:id="@+id/add_line4"
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#DB8C0C" />

        <TextView
            android:id="@+id/add_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="0dp"
            android:fontFamily="sans-serif-thin"
            android:text="Projects"
            android:textSize="32sp" />

        <View
            android:id="@+id/add_line5"
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#DB8C0C" />

        <ListView
            android:id="@+id/export_list_view"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_weight="0.12" >

        </ListView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.45" >
        </LinearLayout>

        <View
            android:id="@+id/add_line6"
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#DB8C0C" />

        <TextView
            android:id="@+id/background_format"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="0dp"
            android:fontFamily="sans-serif-thin"
            android:text="Format"
            android:textSize="32sp" />

        <View
            android:id="@+id/add_line7"
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#DB8C0C" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp" >

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:background="@color/combitech_light_grey" >

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/format1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="5dp"
                        android:text=".csv"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <CheckBox
                        android:id="@+id/format_check1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginRight="0dp" />
                </RelativeLayout>
            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:background="@color/combitech_light_grey" >

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/combitech_light_grey" >

                    <TextView
                        android:id="@+id/format2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="5dp"
                        android:text=".txt"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <CheckBox
                        android:id="@+id/format_check2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginRight="0dp" />
                </RelativeLayout>
            </TableRow>

            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/combitech_light_grey" >

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/format3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="5dp"
                        android:text=".xls"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <CheckBox
                        android:id="@+id/format_check3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginRight="0dp" />
                </RelativeLayout>
            </TableRow>

            <TableRow
                android:id="@+id/tableRow4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
            </TableRow>
        </TableLayout>

        <View
            android:id="@+id/View02"
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_marginTop="10dp"
            android:background="#DB8C0C" />

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="0dp"
            android:fontFamily="sans-serif-thin"
            android:text="Send to"
            android:textSize="32sp" />

        <View
            android:id="@+id/View01"
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#DB8C0C" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="Input:"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/editText1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginRight="10dp"
                android:layout_toRightOf="@+id/textView1"
                android:ems="10"
                android:inputType="textEmailAddress" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </LinearLayout>

        <Button
            android:id="@+id/export"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:fontFamily="sans-serif-thin"
            android:onClick="export"
            android:text="@string/export"
            android:textSize="32sp" />

    </LinearLayout>

</ScrollView>
 